plex/plex-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: plex 
  namespace: plex
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - protocol: TCP 
      port: 32400
      targetPort: 32400
