plex/plex-ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: plex.light-eg.xyz
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plex.light-eg.xyz
    secretName: plex-cert-tls
  rules:
  - host: plex.light-eg.xyz 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
