plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: plex.light-eg.xyz
spec:
  ingressClassName: nginx
  rules:
  - host: plex.light-eg.xyz 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex 
            port:
              number: 8080
